tests/InvalidSyntax/invalidSet.ts
import b from './b';
import a from './a';

const c = {set name(){}}
